Doc/force-app/main/default/objects/Contract/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine whether notification should be sent to contact. Has associated validation rule to ensure that contact is filled out and workflow rule to sent notification</description>
    <inlineHelpText>Check this box to send notification to contact once the contract is signed</inlineHelpText>
    <label>Send External Notification</label>
    <type>Checkbox</type>
</CustomField>