Doc/force-app/main/default/objects/Contract/fields/Services_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration__c</fullName>
    <inlineHelpText>Date at which professional services expire</inlineHelpText>
    <label>Services Expiration</label>
    <type>Date</type>
</CustomField>