Doc/force-app/main/default/objects/Contract/fields/Services_Expiration_Amendment_Status__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration_Amendment_Status__c</fullName>
    <label>Services Expiration Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amendment In Force</fullName>
            </value>
            <value>
                <fullName>Processing Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>