Doc/force-app/main/default/objects/Contract/fields/Services_Expiration_Duration__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration_Duration__c</fullName>
    <label>Services Expiration Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>180 Days or less</fullName>
            </value>
            <value>
                <fullName>270 Days or less</fullName>
            </value>
            <value>
                <fullName>270 Days or more</fullName>
            </value>
            <value>
                <fullName>365 Days or Less</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>