Doc/force-app/main/default/objects/Contract/fields/SFA_Cap__c.field-meta.xml
<CustomField>
    <fullName>SFA_Cap__c</fullName>
    <description>SFA Cap from Quote/Account
Created as part BIZ-45902</description>
    <label>SFA Cap</label>
    <length>35</length>
    <type>Text</type>
</CustomField>