Doc/force-app/main/default/objects/Contract/fields/SFA_Override__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override__c</fullName>
    <description>BIZ-53610: This will overide the Renewal Uplift field &amp; will take precedence over Global SFA / SFA from Quote or Account.</description>
    <label>SFA Override ( % )</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>