Doc/force-app/main/default/objects/Contract/fields/SFA_Override_Applied__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of BIZ-68171.</description>
    <label>SFA Override Applied</label>
    <type>Checkbox</type>
</CustomField>