Doc/force-app/main/default/objects/Contract/fields/SFA_Override_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override_Applied_By__c</fullName>
    <description>Created as part of BIZ-68171.</description>
    <label>SFA Override Applied By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>