Doc/force-app/main/default/objects/Contract/fields/SFA_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override_Notes__c</fullName>
    <description>Created as part of BIZ-68171.</description>
    <label>SFA Override Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>