Doc/force-app/main/default/objects/Contract/fields/SFA_Override_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override_Timestamp__c</fullName>
    <description>Created as part of BIZ-68171.</description>
    <label>SFA Override Timestamp</label>
    <type>DateTime</type>
</CustomField>