Doc/force-app/main/default/objects/Contract/fields/SFDC_Services_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Services_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Services project, populated by integration - BIZ-47397</description>
    <label>SFDC Services Project</label>
    <referenceTo>SFDC_Services_Project__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>