Doc/force-app/main/default/objects/Contract/fields/Shipper_Tracking_Number_Appliance_2__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Tracking_Number_Appliance_2__c</fullName>
    <description>The tracking number for a second appliance.</description>
    <label>Shipper Tracking Number (App. 2 - opt.)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>