Doc/force-app/main/default/objects/Contract/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Account with whom we have the shipping relationship &amp; will get populated from Quote.</description>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Shipping Account)</relationshipLabel>
    <relationshipName>Contract2</relationshipName>
    <type>Lookup</type>
</CustomField>