Doc/force-app/main/default/objects/Contract/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>For people to specify a shipping address if it&apos;s different from billing address.</description>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>