Doc/force-app/main/default/objects/Contract/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Data Entered</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Virtual Appliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>