Doc/force-app/main/default/objects/Contract/fields/Software_Billing_Frequency_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>Software_Billing_Frequency_1st_Year__c</fullName>
    <label>Software Billing Frequency (1st Year)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly in advance</fullName>
                <label>Quarterly Y1 Only</label>
            </value>
            <value>
                <fullName>XXXXX</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Semi-annually</fullName>
                <label>Semi-annually 1 Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>