Doc/force-app/main/default/objects/Contract/fields/Software_Days_Payment_Due_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Software_Days_Payment_Due_Renewal__c</fullName>
    <inlineHelpText>Software Days Payment Due after Initial Term</inlineHelpText>
    <label>Software Days Payment Due (Renewal)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Roox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>