Doc/force-app/main/default/objects/Contract/fields/Standard_Development__c.field-meta.xml
<CustomField>
    <fullName>Standard_Development__c</fullName>
    <description>The number of Standard Development Appliances</description>
    <label>Standard - Development</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>