Doc/force-app/main/default/objects/Contract/fields/Standard_Production__c.field-meta.xml
<CustomField>
    <fullName>Standard_Production__c</fullName>
    <description>The number of Standard Pruction Appliances</description>
    <label>Standard - Production</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>