Doc/force-app/main/default/objects/Contract/fields/Superseded_by_OSA_3__c.field-meta.xml
<CustomField>
    <fullName>Superseded_by_OSA_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded by (OSA) 3</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Superseded by (OSA) 3)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>