Doc/force-app/main/default/objects/Contract/fields/Superseded_by_OSA_4__c.field-meta.xml
<CustomField>
    <fullName>Superseded_by_OSA_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded by (OSA) 4</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Superseded by (OSA) 4)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>