Doc/force-app/main/default/objects/Contract/fields/Superseded_by_OSA__c.field-meta.xml
<CustomField>
    <fullName>Superseded_by_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded by Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Superseded Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>