Doc/force-app/main/default/objects/Contract/fields/Superseded_by_OSA_Display__c.field-meta.xml
<CustomField>
    <fullName>Superseded_by_OSA_Display__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Superseded_by_OSA__c,  Superseded_by_OSA__r.OSA_Number__c)</formula>
    <label>Superseded by OSA (Display)</label>
    <type>Text</type>
</CustomField>