Doc/force-app/main/default/objects/Contract/fields/Time_Builder_Terms__c.field-meta.xml
<CustomField>
    <fullName>Time_Builder_Terms__c</fullName>
    <label>Time Builder Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
                <default>true</default>
                <label>Optional</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>