Doc/force-app/main/default/objects/Contract/fields/Vera_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Vera_s_Email_Address__c</fullName>
    <label>Vera&apos;s Email Address</label>
    <type>Email</type>
</CustomField>