Doc/force-app/main/default/objects/Contract/fields/VPN_Access_Limitation_Type__c.field-meta.xml
<CustomField>
    <fullName>VPN_Access_Limitation_Type__c</fullName>
    <formula>TEXT(Account.VPN_Access_Declined__c)</formula>
    <label>VPN Access Limitation Type</label>
    <type>Text</type>
</CustomField>