Doc/force-app/main/default/objects/Contract/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
            <value>
                <fullName>360 Days</fullName>
            </value>
            <value>
                <fullName>364 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A (Master Terms Apply)</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>