Doc/force-app/main/default/objects/Contract/fields/Xactly_ID__c.field-meta.xml
<CustomField>
    <fullName>Xactly_ID__c</fullName>
    <formula>casesafeID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xactly ID</label>
    <type>Text</type>
</CustomField>