Doc/force-app/main/default/objects/Contract/recordTypes/StandardDirect.recordType-meta.xml
<RecordType>
    <fullName>StandardDirect</fullName>
    <active>false</active>
    <description>These contracts are for standard direct sales.</description>
    <label>Standard Direct</label>
</RecordType>