Doc/force-app/main/default/objects/Contract/validationRules/Only_Sales_Ops_Close_Contracts.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Sales_Ops_Close_Contracts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(CONTAINS($Label.Profiles_Contract,$Profile.Name)),
ISCHANGED(Status),
ISPICKVAL(StatusCode,&quot;Activated&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Only Sales Ops can activate contracts.</errorMessage>
</ValidationRule>