Doc/force-app/main/default/objects/Contract/validationRules/Renewal_Forecast_for_Service_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Forecast_for_Service_Only</fullName>
    <active>true</active>
    <description>Created as part of BIZ-53415.</description>
    <errorConditionFormula>AND(
OR( SBQQ__RenewalForecast__c ,  SBQQ__RenewalQuoted__c ),
ISPICKVAL( Type__c , &apos;Services Only&apos;) 
)</errorConditionFormula>
    <errorMessage>Contracts with only One-Time Subscriptions cannot be renewed</errorMessage>
</ValidationRule>