Doc/force-app/main/default/objects/Contract/validationRules/Require_Cancellation_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancellation_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( ROR__c , &apos;Terminate MultiYear for Convenience w Fee&apos;), Active__c , ISBLANK(TEXT( Cancellation_fee__c )))</errorConditionFormula>
    <errorMessage>Cancellation Fee is mandatory when ROR is Terminate MultiYear for Convenience w Fee</errorMessage>
</ValidationRule>