Doc/force-app/main/default/objects/Contract/listViews/AllInApprovalContracts.listView-meta.xml
<ListView>
    <fullName>AllInApprovalContracts</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 or 5)</booleanFilter>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Specialist Approval Needed,Waiting for Specialist approval to send</value>
    </filters>
    <filters>
        <field>Approver_1__c</field>
        <operation>contains</operation>
        <value>Eldean</value>
    </filters>
    <filters>
        <field>Approver_2__c</field>
        <operation>contains</operation>
        <value>Eldean</value>
    </filters>
    <filters>
        <field>Approver_3__c</field>
        <operation>contains</operation>
        <value>Eldean</value>
    </filters>
    <filters>
        <field>Approver_4__c</field>
        <operation>contains</operation>
        <value>Eldean</value>
    </filters>
    <label>TLS 1.0 Contracts Awaiting Approval</label>
    <language>en_US</language>
</ListView>