Doc/force-app/main/default/objects/Contract/listViews/Baker_OSAs.listView-meta.xml
<ListView>
    <fullName>Baker_OSAs</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Custom_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Baker &amp; McKenzie</value>
    </filters>
    <label>Baker OSAs</label>
    <language>en_US</language>
</ListView>