Doc/force-app/main/default/objects/Contract/listViews/Consolidated_Contracts.listView-meta.xml
<ListView>
    <fullName>Consolidated_Contracts</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Contract_End_Date_Timezone_Adjusted__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Subsidiary__c</columns>
    <columns>Consolidated_Quote__c</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <columns>Superseded_by_OSA__c</columns>
    <columns>Superseded_by_OSA_2__c</columns>
    <columns>Superseded_by_OSA_3__c</columns>
    <columns>Superseded_by_OSA_4__c</columns>
    <columns>Superseded_by_OSA_5__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Superseded by Newer Contract</value>
    </filters>
    <label>Consolidated Contracts</label>
</ListView>