Doc/force-app/main/default/objects/Contract/listViews/Contracts_in_play1.listView-meta.xml
<ListView>
    <fullName>Contracts_in_play1</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.BILLING_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Sent to customer for signature,Quote approved to send to customer</value>
    </filters>
    <label>Contracts in play</label>
</ListView>