Doc/force-app/main/default/objects/Contract/listViews/Contractsthatneedshipping.listView-meta.xml
<ListView>
    <fullName>Contractsthatneedshipping</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>&quot;Contract finalized, waiting for Shipping&quot;,Appliance Ready for Shipping</value>
    </filters>
    <label>Contracts that need shipping</label>
</ListView>